Fixed alignment of the notes list

--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -10,6 +10,7 @@
 }
 
 .notes-list {
+  margin-top: -2px;
   width: 100%;
   height: 100%;
   overflow: auto;
